new-mail.js: use CSS for styling.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6312 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -241,10 +241,7 @@ foxtrick.ContextMenuCopy.Id.desc=Option for copying ID
 foxtrick.ContextMenuCopy.Link.desc=Option for copying link location in HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
-foxtrick.NewMail.desc=Highlight it if you receive new mails
-foxtrick.NewMail.CustomColor.desc=Custom color for new mail number. May require browser restart
-foxtrick.NewMail.HighlightNewMailIcon.desc=Highlight newmail icon in red. May require browser restart
-foxtrick.NewMail.HighlightNewForum.desc=Highlight new forum message number in the menu
+foxtrick.NewMail.desc=Highlight new mail count and new forum message count
 foxtrick.CopyTrainingReport.desc=Adds a Copy Training Report button to the youth training report page
 foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
 foxtrick.CopyScoutReport.desc=Adds a Copy Scout Comment button to the youthplayers detail page
