Add util/notify.js, move notification for mail/forum to new-mail.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6318 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -36,11 +36,7 @@ foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
-foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
-foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Show growl notification (Mac only)
 foxtrick.FoxtrickAlert.AlertSound.desc=Play alert sound
-foxtrick.FoxtrickAlert.NewMail.desc=Displays a pop-up notification for new mails to you (non-supporter)
-foxtrick.FoxtrickAlert.NewForum.desc=Displays a pop-up notification for new forum messages to you (non-supporter)
 foxtrick.AlertCustomSounds.desc=Custom sounds for alerts. Unchecked sounds play default sound. Enabled sounds with empty fields don't play a sound.
 foxtrick.AlertCustomSounds.LoginWelcome.desc=Login welcome
 foxtrick.AlertCustomSounds.LoginSupporters.desc=Supported team logins
@@ -242,6 +238,8 @@ foxtrick.ContextMenuCopy.Link.desc=Option for copying link location in HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
 foxtrick.NewMail.desc=Highlight new mail count and new forum message count
+foxtrick.NewMail.NotifyMail.desc=Show a notification if there are new mails to you
+foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum replies to you
 foxtrick.CopyTrainingReport.desc=Adds a Copy Training Report button to the youth training report page
 foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
 foxtrick.CopyScoutReport.desc=Adds a Copy Scout Comment button to the youthplayers detail page
@@ -627,7 +625,6 @@ foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/alltid.org\/league\/[leagueid] would always lead you to the Alltid page of the series you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
 foxtrick.matches.income=Income:
-foxtrick.newmailtoyou=new mail(s) to you
 foxtrick.newforumtoyou=new forum message(s)
 foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayToday=Birthdays today
@@ -639,6 +636,9 @@ foxtrick.ExtendedPlayerDetails.perseason=/season
 foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
 foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
 foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
+
+notify.newMail=You have received %s new mail(s).
+notify.newForumMessage=There are %s new forum reply(s) to you.
 
 htLive=HT Live
 
