--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
 			"content/util/match-view.js",
 			"content/util/misc.js",
 			"content/util/note.js",
+			"content/util/notify.js",
 			"content/util/string.js",
 			"content/util/time.js",
 			"content/pages/pages.js",
