Rename FoxtrickAlert to TickerAlert and rewrite.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6319 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -35,26 +35,6 @@ foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
-foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
-foxtrick.FoxtrickAlert.AlertSound.desc=Play alert sound
-foxtrick.AlertCustomSounds.desc=Custom sounds for alerts. Unchecked sounds play default sound. Enabled sounds with empty fields don't play a sound.
-foxtrick.AlertCustomSounds.LoginWelcome.desc=Login welcome
-foxtrick.AlertCustomSounds.LoginSupporters.desc=Supported team logins
-foxtrick.AlertCustomSounds.ForumReplyToMe.desc=Forum reply to me
-foxtrick.AlertCustomSounds.TransferMarket.desc=Transfer market
-foxtrick.AlertCustomSounds.Challenges.desc=Challenges
-foxtrick.AlertCustomSounds.Guestbook.desc=Guestbook
-foxtrick.AlertCustomSounds.MailToMe.desc=Mail to me
-foxtrick.AlertCustomSounds.MyHTMessages.desc=MyHT messages
-foxtrick.AlertCustomOff.desc=Custom turning off selected alerts. Checked options don't show alert slider and don't play a sound
-foxtrick.AlertCustomOff.LoginWelcome.desc=Login welcome
-foxtrick.AlertCustomOff.LoginSupporters.desc=Supported team logins
-foxtrick.AlertCustomOff.ForumReplyToMe.desc=Forum reply to me
-foxtrick.AlertCustomOff.TransferMarket.desc=Transfer market
-foxtrick.AlertCustomOff.Challenges.desc=Challenges
-foxtrick.AlertCustomOff.Guestbook.desc=Guestbook
-foxtrick.AlertCustomOff.MailToMe.desc=Mail to me
-foxtrick.AlertCustomOff.MyHTMessages.desc=MyHT messages
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
 foxtrick.TransferSearchFilters.desc=Allows for transfer list search filter templates
@@ -344,6 +324,7 @@ foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
+foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived
 # -----------------------------------------------------------------------------
 
 
