staff-marker.js: use JSON for custom markers.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6320 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -46,7 +46,7 @@ foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your fi
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
-foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
+foxtrick.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
