ticker-alert.js: add custom preferences for each ticker and sound.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6323 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -807,6 +807,20 @@ MyMonitor.type.nt=National
 # MarkAllAsRead
 MarkAllAsRead.title=Mark threads in all forums as read
 
+# TickerAlert
+TickerAlert.enable=Enable
+TickerAlert.sound=Sound
+
+# tickers
+ticker.type.welcome=Welcome message
+ticker.type.supporter=Supported team logs in
+ticker.type.forum=Forum replies
+ticker.type.transfer=Transfer info
+ticker.type.challenge=Challenge
+ticker.type.guestbook=Guestbook
+ticker.type.mail=HT-Mail
+ticker.type.myht=My Hattrick message
+
 #actions
 Copy=Copy
 View=View
