--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -202,9 +202,10 @@ foxtrick.ExtraShortcuts.Supporterstats.desc=Link to supporter stats
 foxtrick.ExtraShortcuts.Transfers.desc=Link to transfers page of the own team
 foxtrick.ExtraShortcuts.Prefs.desc=Link to preferences page
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link to FoxTrick preferences page
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link to Hattrick Radio (Belgium/Netherlands) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link to Hattrick Radio (Belgium/Netherlands) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link to Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
