ticker-alert.js: add support for uncategorized tickers.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6363 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -821,6 +821,7 @@ ticker.type.challenge=Challenge
 ticker.type.guestbook=Guestbook
 ticker.type.mail=HT-Mail
 ticker.type.myht=My Hattrick message
+ticker.type.others=Others
 
 #actions
 Copy=Copy
