match-view.js: add match type images.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6366 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -464,6 +464,18 @@ foxtrick.datetimestrings.short_days=d
 transfercompare_medianprice=Median price
 transfercompare_avgprice=Average price
 
+match.type.league=League
+match.type.qualification=qualification
+match.type.cup=Cup
+match.type.friendly=Friendly
+match.type.friendly.cup=Friendly (Cup rules)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=National Friendly
+match.type.nt.competitive=World Cup
+match.type.youth.league=Youth League
+match.type.youth.friendly=Youth Friendly
+match.type.youth.friendly.cup=Youth Friendly (Cup rules)
+
 #Skills
 Playmaking=Playmaking
 Playmaking.abbr=PM
