--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 			"content/lib/sha1.js",
 			"content/util/currency.js",
 			"content/util/html.js",
+			"content/util/links.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
 			"content/util/note.js",
@@ -84,7 +85,6 @@
 			"content/links/links-club-transfers.js",
 			"content/links/links-coach.js",
 			"content/links/links-country.js",
-			"content/links/links-custom.js",
 			"content/links/links-economy.js",
 			"content/links/links-fans.js",
 			"content/links/links.js",
