--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -205,6 +205,7 @@ foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
