match-tables.js: also remove white space on standard theme.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6422 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -284,7 +284,7 @@ foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select b
 foxtrick.CountryList.TeamPage.desc=Displays a textlink to the league before the region and series on team page
 foxtrick.CountryList.ManagerPage.desc=Displays a textlink to the league before the language on manager page
 foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on team page
-foxtrick.MatchTables.desc=Removes white space on match tables on simple design
+foxtrick.MatchTables.desc=Removes white space on match tables
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
 foxtrick.HTMSPrediction.desc=Add result prediction on match report page
