foxtrick.properties: revise description for YouthSkillHideUnknown.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6443 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -268,9 +268,9 @@ foxtrick.SkillColoring.skill_select.desc=Show also numbers at transfer search i.
 foxtrick.SkillColoring.no_skill_links.desc=Hides the underlining and green font given by HTs
 foxtrick.BackgroundFixed.desc=Static background image.
 foxtrick.MatchIncome.desc=Match income in the match report
-foxtrick.YouthSkillHideUnknown.desc=More space to the youth players page
-foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide youthskills which are unknown on youthplayers overview page
-foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide 'maximal' key word to gain more space particularly if facecards are enabled
+foxtrick.YouthSkillHideUnknown.desc=Hide unknown skills and/or "maximum" word on youth players page
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
+foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide "maximum" word to gain more space
 foxtrick.SkillTable.desc=Show skills of players as a table.
 foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
