FoxTrick log refinements.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6454 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -874,6 +874,8 @@ exception.error=Error %s
 foxtrick=FoxTrick
 preferences=Preferences
 foxtrick.prefs.preferences=FoxTrick Preferences
+foxtrick.log=FoxTrick Log
+
 status.active=active
 status.enabled=enabled, but not active on %s
 status.disabled=disabled
@@ -940,7 +942,7 @@ disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
-foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick page footer (for developers)
+foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
 
 
 ###EOF
