Split module LeagueNewsFilter into LeagueNewsFilter and ShowLineupSet.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6459 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -229,14 +229,11 @@ foxtrick.CopyPlayerSource.OpenHTYpage.desc=Open hattrick-youthclub.org in new ta
 foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
 foxtrick.SeasonStats.desc=Shows some stats on the match archive pages
-foxtrick.LeagueNewsFilter.desc=On series page highlights teams which changed or set line-up recently and adds filter select box for series news.
+foxtrick.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
 foxtrick.LeagueNewsFilter.all.desc=Show all news
 foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Highlight teams which changed or set line-up recently in next round table
-foxtrick.LeagueNewsFilter.highlight_wins.desc=Highlight winning teams in last round table
-foxtrick.LeagueNewsFilter.gray_bots.desc=Gray ownerless teams in match tables
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
@@ -324,6 +321,10 @@ foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattric
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived
+foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
+foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
+foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
+foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 # -----------------------------------------------------------------------------
 
 
