--- a/manifest.json
+++ b/manifest.json
@@ -73,6 +73,7 @@
 			"content/information-aggregation/season-stats.js",
 			"content/information-aggregation/series-flags.js",
 			"content/information-aggregation/show-friendly-booked.js",
+			"content/information-aggregation/show-lineup-set.js",
 			"content/information-aggregation/skill-table.js",
 			"content/information-aggregation/team-stats.js",
 			"content/information-aggregation/transfer-deadline.js",
