transfer-search-result-filters.js: adpat for latest Hattrick changes.
Also use functions to determine whether to hide a player.
Remove player info instead of hiding it.
Modified card from minmax type to hideSuspended for clarity.
Some internal structure changes.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6462 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -759,9 +759,9 @@ Youth=Youth
 team.status.booked=Friendly booked
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Hide bruised
-TransferSearchResultFilters.hide_injured=Hide injured
-TransferSearchResultFilters.cards=Cards:
+TransferSearchResultFilters.hideBruised=Hide bruised
+TransferSearchResultFilters.hideInjured=Hide injured
+TransferSearchResultFilters.hideSuspended=Hide suspended
 TransferSearchResultFilters.days=Days:
 
 # refer to transfer search form
