Move get.+From(Link|Node) functions to util/ht-ml.js.
Also made some changes for being compatible with latest changes in
forum.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6489 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 			"content/lib/sha1.js",
 			"content/util/currency.js",
 			"content/util/html.js",
+			"content/util/ht-ml.js",
 			"content/util/links.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
