Added Extra shortcut for CHPP products management page
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6496 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -199,6 +199,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Increase space for shortcut icons
 foxtrick.ExtraShortcuts.Supporterstats.desc=Link to supporter stats
 foxtrick.ExtraShortcuts.Transfers.desc=Link to transfers page of the own team
 foxtrick.ExtraShortcuts.Prefs.desc=Link to preferences page
+foxtrick.ExtraShortcuts.ManageCHPP.desc=Link to CHPP preferences page
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link to FoxTrick preferences page
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -333,6 +334,7 @@ foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 #icons
 foxtrick.ExtraShortcuts.statistics=Statistics
 foxtrick.ExtraShortcuts.transfers=Transfers
+foxtrick.ExtraShortcuts.ManageCHPP=Manage your CHPP products
 foxtrick.ExtraShortcuts.prefs=Preferences
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick preferences
 
