Introduce LocalTime module for showing time in local time zone.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6514 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -295,8 +295,7 @@ foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Open Gabbly chat in new window
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Choose your nickname for Chat
 foxtrick.RapidId.desc=A convenient input box on the top of page to view team, player, etc. by id
 foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
-foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
-foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
+foxtrick.LocalTime.desc=Optionally show time in local time zone instead of Hattrick time zone
 foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
@@ -831,6 +830,12 @@ ticker.type.mail=HT-Mail
 ticker.type.myht=My Hattrick message
 ticker.type.others=Others
 
+# LocalTime
+LocalTime.hattrick=Hattrick time
+LocalTime.hattrick.title=Time in Hattrick time zone. Click the clock to switch to local time.
+LocalTime.local=Local time
+LocalTime.local.title=Time in local time zone. Click the clock to switch to Hattrick time.
+
 #actions
 Copy=Copy
 View=View
@@ -903,6 +908,8 @@ foxtrick.prefs.basicPreferences=Basic Preferences
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTDateformat=Date format
 foxtrick.prefs.captionHTCountry=Country
+pref.printDateFormat=Date format for printing
+
 foxtrick.prefs.captionShowOnStatusBar=Status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
