--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
 			"content/forum-stage.js",
 			"content/core.js",
 			"content/api-proxy.js",
+			"content/add-class.js",
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
 			"content/util/currency.js",
