Add option CalendarAutoMinHeight in module FixcssProblems.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6539 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -171,6 +171,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Fixes some HT error for right-to-left wri
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Adds fixed scrollbar to forum. Less flickering than HT option
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Increase font size for HT 'small font' format.
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Remove 'Forum sneak-peek' from all pages.
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Use automatic min-height for calendar to reduce space.
 foxtrick.SimplePresentation.desc=Additional presentation options
 foxtrick.SimplePresentation.League_Table.desc=Adds vertical lines to league table for easier reading
 foxtrick.SimplePresentation.Guestbook.desc=Increases readability in the guestbook (indent message with gray background)
