live-alert.js: add sound option.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6545 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -300,7 +300,8 @@ foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selec
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
-foxtrick.LiveAlert.desc=Alert HT Live goals
+foxtrick.LiveAlert.desc=Show a notification for HT Live goals
+foxtrick.LiveAlert.Sound.desc=Also alert with a sound
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
 foxtrick.SeriesFlags.desc=Show series flags beside user links
