new FoxTrick module for Hattrick Youth Statistics ht-ys.org
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6548 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -326,6 +326,9 @@ foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or owner
 foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
+foxtrick.CopyYouthLeagueFixturesSource.desc=Adds a 'Copy HTML source code' button to the youth league fixtures page (for Youth Statistics ht-ys.org)
+foxtrick.CopyYouthLeagueFixturesSource.OpenHTYSpage.desc=Open ht-ys.org in a new tab after copying
+foxtrick.YouthStatistics.desc=Adds a link to Youth Statistics ht-ys.org to the youth league page
 # -----------------------------------------------------------------------------
 
 
@@ -673,6 +676,10 @@ foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the c
 foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
 foxtrick.tweaks.postidcopied=Post ID [post=%s] has been copied to the clipboard.
 foxtrick.tweaks.postingcopied=Posting %s has been copied to the clipboard.
+foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
+foxtrick.tweaks.copyyouthfixturessource=Copy HTML source code to clipboard
+foxtrick.tweaks.youthfixturessourcecopied=The HTML source code has been copied to the clipboard.
+foxtrick.tweaks.linkyouthstatistics=Youth Statistics
 
 #matches
 foxtrick.matches.attackdefensebars=Attack vs Defense
