foxtrick.js: add locale in log header.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6553 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -890,7 +890,7 @@ exception.error=Error %s
 foxtrick=FoxTrick
 preferences=Preferences
 foxtrick.prefs.preferences=FoxTrick Preferences
-foxtrick.log=FoxTrick Log (%1 on %2)
+foxtrick.log=FoxTrick Log (%1 on %2, locale %3)
 
 status.active=active
 status.enabled=enabled, but not active on %s
