foxtrick.properties: refine YouthPromotes message.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6556 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -354,7 +354,7 @@ foxtrick.HistoryStats.cupwinner=Cup winner
 foxtrick.HistoryStats.cupwinner.short=CW
 
 # YouthPromotes
-YouthPromotes.future=Player can be promoted %1 day(s) later at %2.
+YouthPromotes.future=Player can be promoted %1 day(s) later, on %2.
 YouthPromotes.today=Player can be promoted today!
 
 # links
