Add Hattrick Youth Statistics to FoxTrick Links; Add Hattrick Youth Statistics link to youth league page;
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6557 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -80,6 +80,7 @@ foxtrick.LinksYouthTraining.desc=Adds some external links to the youth training 
 foxtrick.LinksYouthPlayerDetail.desc=Adds some external links to the youth player details page
 foxtrick.LinksYouthPlayerList.desc=Adds some external links to the youth players page
 foxtrick.LinksYouthMatchList.desc=Adds some external links to the youth matches page
+foxtrick.LinksYouthLeague.desc=Adds some external links to the youth league page
 foxtrick.LinksArena.desc=Adds some external links to the arena page
 foxtrick.LinksCoach.desc=Adds some external links to the new-coach page
 foxtrick.LinksPlayerDetail.desc=Adds some external links to the players detail page
