--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -321,6 +321,7 @@ foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
+foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
 foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived
 foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
 foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
@@ -766,6 +767,8 @@ Senior=Senior
 Youth=Youth
 
 team.status.booked=Friendly booked
+ShowFriendlyBooked.ShowFriendlies=Show friendlies
+
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.hideBruised=Hide bruised
