tickeralert: welcome default off. improved description
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6589 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -322,7 +322,7 @@ foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattric
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
-foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived
+foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived. Keep text field empty to display alert only and no sound.
 foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
 foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
