testing: added currentSquad markers to statsSquad. will get moved to own module later
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6602 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -642,6 +642,7 @@ foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
 
 Coach=Coach
+CurrentSquad=Current squad
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
@@ -785,6 +786,7 @@ foxtrick.RapidId.ViewById=View By ID
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.detach=Detach
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Non HT Match Chat
@@ -850,6 +852,7 @@ LocalTime.local.title=Time in local time zone. Click the clock to switch to Hatt
 Copy=Copy
 View=View
 Switch_view=Switch view
+Detach=Detach
 Filter=Filter
 
 # buttons
