new module: supporterstats-enhancements
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6603 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -327,6 +327,8 @@ foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or owner
 foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
+foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+
 # -----------------------------------------------------------------------------
 
 
