--- a/manifest.json
+++ b/manifest.json
@@ -81,6 +81,7 @@
 			"content/information-aggregation/transfer-deadline.js",
 			"content/information-aggregation/youth-promotes.js",
 			"content/information-aggregation/youth-series-estimation.js",
+			"content/information-aggregation/supporterstats-enhancements.js",			
 			"content/links/links-achievements.js",
 			"content/links/links-alliances.js",
 			"content/links/links-arena.js",
