skill-table-oldies: options to hide bots and add currentsquad-homegrown (v1)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6605 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -788,6 +788,8 @@ foxtrick.RapidId.ViewById=View By ID
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current
+foxtrick.SkillTable.Remove_bot_players_title=Removes players of bot teams
 foxtrick.SkillTable.detach=Detach
 
 # External Chat
@@ -855,6 +857,8 @@ Copy=Copy
 View=View
 Switch_view=Switch view
 Detach=Detach
+AddHomegrown=Add homegrown players
+RemoveBotPlayers=Remove bot players
 Filter=Filter
 
 # buttons
