skill-table: fixed new hotlist link on transfer-search-results table. little loading box tweaking
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6606 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -588,6 +588,9 @@ Current_club.abbr=Club
 Current_league=Current league
 Current_league.abbr=League
 
+Hotlist=Hotlist
+Hotlist.abbr=Hot
+
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
