skill-table.js: specs localized
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6607 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -496,6 +496,13 @@ Keeper.abbr=KP
 Set_pieces=Set pieces
 Set_pieces.abbr=SP
 
+Technical=Technical
+Quick=Quick
+Powerful=Powerful
+Unpredictable=Unpredictable
+Head=Head
+Regainer=Regainer
+
 HTMS_Ability=HTMS Points Ability
 HTMS_Ability.abbr=Ability
 HTMS_Potential=HTMS Points Potential
