foxtrick.js: detailed environment info in log. (fixes #748)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6610 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -912,7 +912,9 @@ exception.error=Error %s
 foxtrick=FoxTrick
 preferences=Preferences
 foxtrick.prefs.preferences=FoxTrick Preferences
-foxtrick.log=FoxTrick Log (%1 on %2, locale %3)
+foxtrick.log.header=FoxTrick Log
+# keep the following line untranslated
+foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 status.active=active
 status.enabled=enabled, but not active on %s
