--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -270,6 +270,7 @@ foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide "maximum" word to gain more space
 foxtrick.SkillTable.desc=Show skills of players as a table.
 foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
+foxtrick.SkillTable.ColouredYouth.desc=Show coloured youth skills
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
