--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -166,6 +166,7 @@ foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Displays seasonal wage
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long teamnames on left menu
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Fixes invisible FoxLink images in posting headers
+foxtrick.FixcssProblems.HideInvitation.desc=Hide invitation box visible on the bottom of submenu
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Fixes jumping page when no scrollbar is shown
 foxtrick.FixcssProblems.RTL_Fixes.desc=Fixes some HT error for right-to-left writing languages
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Adds fixed scrollbar to forum. Less flickering than HT option
