skill-table: added joined since on demand to senior players
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6645 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -589,6 +589,9 @@ Current_club.abbr=Club
 Current_league=Current league
 Current_league.abbr=League
 
+JoinedSince=Joined since
+JoinedSince.abbr=Since
+
 Hotlist=Hotlist
 Hotlist.abbr=Hot
 
@@ -794,6 +797,7 @@ foxtrick.RapidId.ViewById=View By ID
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
 foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current
 foxtrick.SkillTable.Remove_bot_players_title=Removes players of bot teams
+foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior team
 foxtrick.SkillTable.detach=Detach
 
 # External Chat
@@ -863,6 +867,7 @@ Switch_view=Switch view
 Detach=Detach
 AddHomegrown=Add homegrown players
 RemoveBotPlayers=Remove bot players
+showTimeInClub=Show time in club
 Filter=Filter
 
 # buttons
