skill-table.js: added transferCompare links
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6655 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -761,6 +761,8 @@ Age.abbr=Age
 Match=Match
 Series=Series
 
+TransferCompare=TransferCompare
+TransferCompare.abbr=TC
 Bookmark=Bookmark
 Bookmark.abbr=Bm
 Deadline=Deadline
