skill-table: added psico (average form)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6659 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -497,6 +497,8 @@ Keeper.abbr=KP
 Set_pieces=Set pieces
 Set_pieces.abbr=SP
 
+PsicoTSI=PsicoTSI (average form)
+PsicoTSI.abbr=Psico
 HTMS_Ability=HTMS Points Ability
 HTMS_Ability.abbr=Ability
 HTMS_Potential=HTMS Points Potential
