preferences: shortcut_links prefs -> page sorted preferences
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6661 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -927,6 +927,8 @@ prefs.screenshot=Screenshot
 
 # tabs in preferences page
 tab.main=Main
+tab.pagefiltered=Page modules
+tab.allfiltered=Universal modules
 tab.informationAggregation=Information Aggregation
 tab.shortcutsAndTweaks=Shortcuts and Tweaks
 tab.presentation=Presentation
