--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -62,6 +62,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
+foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
@@ -435,6 +436,10 @@ ForumYouthIcons.youthplayerid=Insert youth player tag.
 ForumYouthIcons.youthteamid=Insert youth team tag.
 ForumYouthIcons.youthmatchid=Insert youth match tag.
 ForumYouthIcons.youthseries=Insert youth series tag.
+
+ForumOtherIcons.label=Other
+ForumOtherIcons.debug=Insert FoxTrick debug log.
+
 #special bbcode, not really youth icons
 ForumSpecialBBCode.q=Add quote
 ForumSpecialBBCode.br=Add line break
