forum-youth-icons : icon for foxtrick settings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6667 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -63,6 +63,7 @@ foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
+foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
@@ -439,6 +440,7 @@ ForumYouthIcons.youthseries=Insert youth series tag.
 
 ForumOtherIcons.label=Other
 ForumOtherIcons.debug=Insert FoxTrick debug log.
+ForumOtherIcons.settings=Insert FoxTrick settings.
 
 #special bbcode, not really youth icons
 ForumSpecialBBCode.q=Add quote
