--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -991,6 +991,9 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
+filter.all=By categories
+filter.page=By last HT page
+
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
