--- a/manifest.json
+++ b/manifest.json
@@ -174,6 +174,7 @@
 	},
 	"name" : "FoxTrick",
 	"permissions" : [
+		"tabs",
 		"notifications",
 		"*://*.hattrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
